
SVN

* Show recent deployments on the project page

* A deployment is no longer required, it is optional from now on

* Track deployed revisions

* Rename 'www' role to 'web' to match Capistrano, #91 by sergio@entrecables.com

* Support array values for configuration paramters, #93 by paradise

* Update Capistrano to 2.5.0

* Update to Rails 2.1.1

* Allow to clone a project. Stages and configuration is cloned for now. Closes #85

* Update to Capistrano 2.4.3

* Add Recipe versioning with version_fu. Provided by Mathias Meyer

* Update to Capistrano 2.4.0

* Update to Rails 2.1

* Add /projects/1/stages/1/deployments/latest. Provided by Mathias Meyer

* Fix XML output of stage tasks. Provided by Mathias Meyer

* Add version info XML action. Provided by Mathias Meyer

* Update Net::SSH to 1.1.3

1.3

* Add support for mod_rails / Phusion Passenger. Use mod_rails as project type.

* Ability to disable host per deloy. This way host that are down do not block a deployment

* Check syntax of recipes. Provided by Mathias Meyer

* Ajax-Preview on recipe edit. Provided by Mathias Meyer

* Update Capistrano to 2.2.0 and Net::SFTP to 1.1.1

* Better handling of `repeat` task by also repeating the description

* Moved ActionController session key to webistrano_config.rb

* Used template naming conventions of Rails 2.x: Provided by kosmas.schuetz@gmx.com
    *.rhtml => *.html.erb
    *.rjs => *.js.rjs 
    
* Updated to Prototype 1.6

* Add script/deploy Ruby script to deploy from the command line, provided by Peter J Jones <pjones@pmade.com>

* Update included Rails version to 2.0.2

* Add tztime and give each user a time zone

* Introduce a 5 second sleep between mongrel stop and start while restarting'

* Only admins can manage projects, recipes, hosts, and users. Normal users can only view.

* Show also all recent deployments in dashboard

* Rename deployments DB column to description in order to prevent Oracle crash, fix #17

* Delete the cached stylesheet on server boot